--- a/settings.html
+++ b/settings.html
@@ -44,7 +44,7 @@
     <!-- Content Area -->
     <section class="flex-1 p-8">
       <!-- User Profile -->
-      <div id="section-userprofile" class="hidden space-y-6">
+      <div id="section-userprofile" class="space-y-6">
         <h3 class="text-xl font-semibold">User Profile</h3>
         <form id="profileForm" class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-lg">
           <div>
