--- a/settings.html
+++ b/settings.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body class="bg-gray-950 text-white font-inter">
-  <!-- Top Navigation -->
-  <header class="bg-gray-900 px-6 py-4 flex items-center justify-between">
+  <header id="topNav" class="hidden bg-gray-900 px-6 py-4 flex items-center justify-between">
     <div class="flex items-center space-x-4">
       <img src="https://github.com/Harveyp1/nexustime/blob/main/nexustimelogo.png?raw=true" alt="Logo" class="h-10" />
       <span class="text-2xl font-bold text-emerald-400">NexusTime</span>
@@ -24,11 +23,18 @@
     </nav>
   </header>
 
-  <div class="flex min-h-screen">
+  <!-- Error Messages -->
+  <div id="authError" class="hidden p-6 text-center">
+    <p class="text-red-400 mb-4">You are not signed in. Please <a href="app.html" class="text-emerald-400 underline">log in</a> to access settings.</p>
+  </div>
+  <div id="workspaceError" class="hidden p-6 text-center">
+    <p class="text-red-400 mb-4">No workspace selected. Please <a href="switch-workspace.html" class="text-emerald-400 underline">choose a workspace</a>.</p>
+  </div>
+
+  <div id="mainContainer" class="hidden flex min-h-screen">
     <!-- Sidebar -->
     <aside class="w-64 bg-gray-900 p-6 space-y-6">
       <h2 class="text-xl font-bold text-gray-200">Settings</h2>
-      <!-- Plan Card -->
       <div id="planCard" class="bg-gray-800 p-4 rounded flex justify-between items-center">
         <div>Plan: <span id="workspacePlanSidebar" class="font-semibold"></span></div>
         <button id="upgradePlanSidebar" class="bg-yellow-500 text-gray-900 px-3 py-1 rounded hidden">Upgrade</button>
@@ -46,23 +52,18 @@
     <section class="flex-1 p-8">
       <div id="section-userprofile" class="hidden space-y-6">
         <h3 class="text-xl font-semibold">User Profile</h3>
-        <!-- User profile fields -->
       </div>
       <div id="section-workspacebilling" class="hidden space-y-6">
         <h3 class="text-xl font-semibold">Workspace & Billing</h3>
-        <!-- Billing content -->
       </div>
       <div id="section-logoupload" class="hidden space-y-6">
         <h3 class="text-xl font-semibold">Workspace Logo</h3>
-        <!-- Logo upload content -->
       </div>
       <div id="section-generalsettings" class="hidden space-y-6">
         <h3 class="text-xl font-semibold">Workspace Settings</h3>
-        <!-- General settings content -->
       </div>
       <div id="section-roles" class="hidden space-y-6">
         <h3 class="text-xl font-semibold">Roles & Permissions</h3>
-        <!-- Roles content -->
       </div>
     </section>
   </div>
@@ -87,38 +88,37 @@
 
     onAuthStateChanged(auth, async user => {
       console.log('Debug: onAuthStateChanged fired, user=', user);
-      // Removed redirect to allow debugging
-      // if (!user) {
-      //   console.error('Debug: No user, would redirect here');
-      //   return;
-      // }
+      if (!user) {
+        document.getElementById('authError').classList.remove('hidden');
+        return;
+      }
       const workspaceId = localStorage.getItem('activeWorkspace');
       console.log('Debug: Retrieved workspaceId=', workspaceId);
-      // if (!workspaceId) {
-      //   console.error('Debug: No workspaceId, would redirect here');
-      //   return;
-      // }
+      if (!workspaceId) {
+        document.getElementById('workspaceError').classList.remove('hidden');
+        return;
+      }
 
-      // setup tab clicks
+      // show main content
+      document.getElementById('topNav').classList.remove('hidden');
+      document.getElementById('mainContainer').classList.remove('hidden');
+
+      // setup tabs
       document.querySelectorAll('aside button').forEach(btn => {
         btn.addEventListener('click', () => {
-          console.log('Debug: Tab clicked=', btn.dataset.section);
           document.querySelectorAll('section [id^="section-"]').forEach(sec => sec.classList.add('hidden'));
           document.getElementById('section-' + btn.dataset.section).classList.remove('hidden');
         });
       });
       document.getElementById('tab-userprofile').click();
 
-      // populate sidebar plan (if workspaceId exists)
-      if (workspaceId) {
-        const wsRef = doc(db, 'workspaces', workspaceId);
-        const wsSnap = await getDoc(wsRef);
-        console.log('Debug: Workspace snapshot exists=', wsSnap.exists());
-        if (wsSnap.exists()) {
-          const data = wsSnap.data();
-          document.getElementById('workspacePlanSidebar').textContent = data.plan;
-          if (data.plan !== 'Enterprise') document.getElementById('upgradePlanSidebar').classList.remove('hidden');
-        }
+      // load workspace plan
+      const wsRef = doc(db, 'workspaces', workspaceId);
+      const wsSnap = await getDoc(wsRef);
+      if (wsSnap.exists()) {
+        const data = wsSnap.data();
+        document.getElementById('workspacePlanSidebar').textContent = data.plan;
+        if (data.plan !== 'Enterprise') document.getElementById('upgradePlanSidebar').classList.remove('hidden');
       }
     });
   </script>
